# sibdev_test

./: README.md  docker-compose.prod.yml  docker-compose.yml
docs/: openapi.yaml
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  Dockerfile.prod  pyproject.toml
server/apps/deals/: urls.py
server/apps/deals/admin/: __init__.py  customer.py  deal.py  gem.py
server/apps/deals/constants/: __init__.py  cache.py  customer.py  handler_errors.py
server/apps/deals/models/: __init__.py  customer.py  deal.py  gem.py
server/apps/deals/models/managers/: __init__.py  customer.py
server/apps/deals/models/querysets/: __init__.py  customer.py
server/apps/deals/serializers/: __init__.py  customer.py  deal.py  gem.py
server/apps/deals/services/: __init__.py  deals_file_handler.py
server/apps/deals/utils/: __init__.py  database.py
server/apps/deals/views/: __init__.py  deal.py
server/config/: api_urls.py  urls.py
server/config/migrations/deals/: 0001_initial.py  0002_customer_gem_alter_deal_options_alter_deal_customer_and_more.py  0003_alter_deal_total.py
server/config/settings/: installed_apps.py  settings.py
